--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -166,7 +166,7 @@ For a broad characterization of decision trees and their construction in classif
 We present here a run of the a decision tree over $\mathcal{T}$.
 In this case the \cref{target2} was used as an example.
 The tree was built using a standard configuration with a low depth of 5 and a Gini splitting criteria.
-At each decision node, we configured the algorithm to be able to select any feature $X^j$ to perform the split. 
+At each decision node, we configured the algorithm to be able to select any feature $X^j$ to perform the split.
 Also, we configured the minimum split threshold to be of $20$ samples.
 This meant that no further splits were created when less than this number of samples was left at that node.
 Under this setup, the algorithm ran in approximately 15 seconds.
@@ -206,7 +206,7 @@ The error score reached by this tree, howerver, yields a poor performance over a
 Evaluated with the $Accuracy$ metric, we see a score of $43.2\%$ with this learner.
 Under these circumstances, noting which features were selected near the root leaves of the tree would not be very informative to the overall problem.
 
-We decide to iterate once again on this model, but now slightly changing some hyperparameter values. 
+We decide to iterate once again on this model, but now slightly changing some hyperparameter values.
 In this iteration the the balance of $\mathcal{T}$ is controlled and this is because in this task, the positive and negative classes have a disproportionate balance of samples and this is reflected in the overall model's poor performance.
 For this reason, we modified the setup of the loss function of the tree to weigh more samples from the under-represented class over the samples from the abundant group.
 For each sample, it's loss weight was adjusted by it's class representation ratio.
@@ -344,7 +344,7 @@ For this case, there is virtually no change in model error by improving bias or 
  Another plausible explanation for this is that, for this task, the forest's performance rapidly converges to the generalization error with a minimum of 10 trees and that adding more trees doesn't certainly improve on the predictions.
 
 
-At their optimal configuration, both setups reached CV score averages of at least 0.75, with a maximum of 0.81 for the forest
+At their optimal configuration, both setups reached CV score averages of at least $75\%$, with a maximum of $81\%$ for the forest
 with trees of 16 levels.
 The optimal number of estimators for the CV and the training sets were not the same though, where 139 was the best configuration for the training score whilst 133 was the best average for the CV set.
 The relative difference in these best scores was of $3.3\%$.
@@ -377,7 +377,7 @@ With this, we can introduce the strength for this forest as
 s = \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right]
 \end{equation}
 
-Now define $ \rho(\Theta, \Theta')$ as the correlation between $rmg(\Theta,\textbf{x},\textbf{y})$ and $rmg(\Theta',\textbf{x},\textbf{y})$ of two learners, then we can have the mean value correlation for the ensemble as 
+Now define $ \rho(\Theta, \Theta')$ as the correlation between $rmg(\Theta,\textbf{x},\textbf{y})$ and $rmg(\Theta',\textbf{x},\textbf{y})$ of two learners, then we can have the mean value correlation for the ensemble as
 
 %	where we have conveniently defined as
 %Note that this is the mean value of the correlation.
@@ -429,7 +429,7 @@ With this, the features with highest scores can be thought to be the most inform
 \subsection{Experiments}\label{subsection:random_forests_experiments}
 
 In this subsection, we explore on the task described on \cref{target4} by fitting random forest learners.
-Here, our cross validation procedure explored multiple combinations of hyperparameters that we predefined. 
+Here, our cross validation procedure explored multiple combinations of hyperparameters that we predefined.
 Let $\alpha_i \forall i \in {1,\ldots,J}$ be the list of our $j$ hyperparameters.
 
 Denote all possible combinations by $A_1 \times A_2 \ldots \times  A_J$, where each hyperparameter $\alpha_i$ will take all possible values in the predefined sets $A_i \forall i \in {1,\ldots,J}$.
@@ -732,7 +732,7 @@ In order to compare this learner to Random Forests, we ran the same setup as in 
 with two experiments each varying a different hyperparameter.
 The Boosting models were built to classify on task \cref{target2} and the $Accuracy$ score was used to evaluate their performance.
 The cross validation procedure set 10 folds for each hyperparameter
- configuration and both experiments individually tuned on: 
+ configuration and both experiments individually tuned on:
 \begin{enumerate*}[label={\alph*)},]
 \item the maximum tree depth and
 \item the number of base learners
@@ -743,7 +743,7 @@ As a default configuration, 50 was the number of trees, and 6 were the trees' ma
 Additionally, we used the Gini index as the impurity measure in the splitting criteria of each tree's node and the exponential loss function to grow the next estimator in line with the formulation given in \cref{eq:adaBoostThetaDecomposition}.
 % .\footnote{Other loss functions are available but these would not yield the AdaBoost formulation.}
 
-Cross validation procedures ran for 82150.8 and 6076.3 seconds respectively and they both excluded attributes of the user's home state and their current endemic condition at $T_1$.
+Cross validation procedures ran for 3616.5 and 2776.3 seconds respectively and they both excluded attributes of the user's home state and their current endemic condition at $T_1$.
 
 The experiment's score outcomes across the different hyperparameter values were graphed in \cref{fig:boosting_validation_curves_depth_trees,fig:boosting_validation_curves_num_trees}.
 These compare the cross-validated and training set scores, where, for each hyperparameter value, the $1 - Accuracy$ score is graphed as a function of the hyperparameter's value.
@@ -945,7 +945,7 @@ A summary of the metrics and best hyperparameter values is given in \cref{tab:bo
 \toprule
 Result & Experiment 1 & Experiment 2 & Experiment 3 \\
 \midrule
-Running time (s)        & 1172 &  6293 &  204 \\
+Running time (s)        & 2993 & 1172  &  204 \\
 CV $Accuracy$ score    & 0.889 &  0.843 &  0.8327 \\
 CV $ROC AUC$ score     & 0.884 & 0.880  &  0.881 \\
 CV $F1$ score           & 0.314  &  0.319 &  0.354 \\
@@ -966,7 +966,7 @@ step\_size  & 0.01 &  0.1 &  1 \\
 \end{table}
 
 The first notable fact from the results is how fast the last procedure is, compared to the two before.
-It trained much faster, with almost 3 minutes to complete the full procedure whilst the others had at minimum 15 minutes to do so.
+It trained much faster, with almost 3 minutes to complete the full procedure whilst the others had at minimum 20 minutes to do so.
 We see that the information from the top 30 features of the RF models was efficiently used in this boosting experiment and that this considerably sped up the runtime.
 This improvement should not be surprising then, as we have limited the amount of available features to use, thus decreasing the necessary computer resources to compute the fit.
 % However, this conclusion might seem
@@ -980,7 +980,7 @@ There is difficulty though in establishing which of them had the most weight in 
 This situation is not that different for the $F1$ score of the experiments.
 We have that the last procedure improved on the first two experiments in more than $10\%$, using this score and in an almost $20\%$ increase in the precision score.
 This hints the idea that the first two models were overfitting the training set and by using the top random forest features, we strongly improved on the $F1$ performance.
-Finally, when compared with the experiments using the Random Forest, we see that the boosting models performed near to the top $F1$ value of $37\%$ achieved in the Random Forest experiments. 
+Finally, when compared with the experiments using the Random Forest, we see that the boosting models performed near to the top $F1$ value of $37\%$ achieved in the Random Forest experiments.
 The worst relative difference for all models, to this value, was of $17\%$ at most and $4.5\%$ at least.
 
 Still, the top Random Forest $F1$ score was attained in the first experiment with Random Forests, where we did use highly target-correlated features.
