--- a/ch_results.tex
+++ b/ch_results.tex
@@ -334,14 +334,14 @@ For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test
     \toprule
     Measure & Problem 1 & Problem 2 & Problem 3 & Problem 4  \\
     \midrule
-    Naive Bayes     & (0.84,0.82,0.75)  & (0.64,0.61,0.31)  &  (0.65,0.63,0.45)   & (0.85,0.76,0.62)   \\
+    Naive Bayes     & (0.84,0.82,0.75)  & (0.64,0.61,0.41)  &  (0.65,0.63,0.45)   & (0.85,0.76,0.62)   \\
     Logistic Classifier   & (0.893,0.857,0.9)  & (0.71,0.72,0.248)  &  (0.705,0.754,0.307)   & (0.883,0.85,0.331)   \\
     Random Forest   & (0.878,0.857,0.9)  & (0.79,0.776,0.278)  &  (0.792,0.845,0.346)   & (0.898,0.853,0.393)   \\
     Gradient Boosting   & (0.974,0.978,0.952)  & (0.838,0.819,0.291)  &  (0.811,0.855,0.359)   & (0.885,0.873,0.384)   \\
-%$Naive Bayes$         & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62  & 1 \\
-%$Logistic \ Regression& 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.058 & 119 && 0.705 & 0.754 & 0.107 & 115 && 0.883 & 0.85  & 0.181 & 106 \\
-%$Random \ Forest$     & 0.878 & 0.903 & 0.77  & 33 && 0.79  & 0.776 & 0.088 & 45  && 0.792 & 0.845 & 0.156 & 21  && 0.898 & 0.853 & 0.203 & 19\\
-%$Gradient \ Tree \ Boo& 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.101 & 54  && 0.811 & 0.855 & 0.169 & 33  && 0.885 & 0.873 & 0.194 & 47 \\
+%$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+%$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
+%$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
+%$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
 
     \bottomrule
     \end{tabular*}
@@ -359,10 +359,10 @@ For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test
 %                  \cmidrule{2-5} \cmidrule{6-9} \cmidrule{10-13} \cmidrule{14-17}
 %                 & $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ \\
 %                 \midrule
-%                 $Naive Bayes$ & 0.84 & 0.82 & 0.75 & 2 && 0.64 & 0.61 & 0.31 & 2 && 0.65 & 0.63 & 0.45 & 1 && 0.85 & 0.76 & 0.62 & 1 \\
-%                 $Logistic \ Regression$ & 0.893 & 0.857 & 0.9 & 96 && 0.714& 0.726 & 0.058  & 119 && 0.705& 0.754 & 0.107 & 115 && 0.883 & 0.85 & 0.181 & 106 \\
-%                 $Random \ Forest$ & 0.878 & 0.903 & 0.77 & 33  && 0.79 & 0.776 & 0.088 & 45 && 0.792 & 0.845 & 0.156 & 21 && 0.898 & 0.853 & 0.203 &  19\\
-%                 $Gradient \ Tree \ Boosting$  & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 &  0.101 & 54  && 0.811 & 0.855 & 0.169 & 33 && 0.885 & 0.873  & 0.194 & 47 \\
+%                   $Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+%                   $Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
+%                   $Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
+%                   $Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
 %                 \bottomrule
 %             \end{tabular}
 %             \caption{Caption}
@@ -376,41 +376,44 @@ At a first glance there are some notable results exposed in this table.
 \subsection{Runtime Performance}\label{subsec:master_table_runtime}
 
 It is clear that the Naive Bayes algorithms outperforms all other models in runtime and, in some cases, this improvement is in orders of magnitude.
-The algorithm's worst performance for all problems is of two minutes whilst the best runtime for any other classifier is for the Random Forest, with 19 minutes of runtime for the problem of labeling users that travelled out of the endemic region, yet only for a subset of the users base.
-Namely those which are currently settled outside of the endemic region.
+The algorithm's worst performance for all problems is of two minutes whilst the best runtime for any other classifier is for the Random Forest, with 19 minutes of runtime for the problem of labeling users that travelled out of the endemic region, yet only for a subset of the users base: namely those users which are currently settled outside of the endemic region.
 
 The Naive Bayes algorithm's runtime shows a strong difference with the Logistic Regression which was the slowest method overall, with the fastest runtime for all problems being greater than an hour and a half.
-Having the Logistic Regression as the slowest performing algorithm may be surprising to the reader considering that in these runtimes are measured on the cross validation procedures and that this classifier has a short list of hyperparameters to optimize, when compared to tree based methods.
+Having the Logistic Regression as the slowest performing algorithm may be surprising to the reader.
+Consider that in the runtimes measure timings on the cross validation procedures and that, the logistic classifier, has a short list of hyperparameters combinations to optimize, when compared to tree based methods.
 Still, we suspect that the time bottleneck in this algorithm comes in the slow optimization procedure where, for every iteration, the whole dataset needs to be reused to build the direction of steepest descent.
 
-Interestingly enough the Gradient Boosting algorithm had a worst runtime than the Random Forest, in cases that almost doubled the runtime.
-The reason for this is that when building the Random Forest ensemble we have that the weak learners need not be dependent, so the optimization routine can be easily benefited with parallelization procedures.
-On the other hand boosting trees build successive weak learners that improve on the most current model.
+Another result here is that the Gradient Boosting algorithm had a worst runtime than the Random Forest, in cases that almost doubled the runtime.
+Even though the boosting algorithms implement several heuristics to speed up the algorithms with local gradient approximations, we also have that when building the Random Forest ensemble, the weak learners need not be dependent, so the optimization routine can create them in parallel computations.
+Thus this algorithm benefits strongly from parallelization procedures.
+On the contrary, the boosting procedure builds successive trees that improve on the most current model.
 This dependency limits the optimization routine parallelization opportunities.
 
-Still, at this point it is worth to mention that the runtimes resulted from experiments that were not performed under controlled computing environments.
+At this point it is worth to mention that the runtimes resulted from experiments that were not performed under controlled computing environments.
 For example, we can no assure that all cross-validation procedures were done in settings with equal available computational resources.
 Even though results seemed consistent across all problems, we know that these results shouldn't be considered as benchmarks.
 
 
 \subsection{Low F1 Scores}\label{subsec:master_table_low_f1}
 
-Overall, we can say that, excepting the problem of predicting users that had lived in the endemic region in the past, no model had satisfactory $F1$ scores for any of the problems. The top two $F1$ score for \cref{target2,target3,target4} and for any best-fit learners, were $0.62$ and $0.45$.
+Overall, we can say that, excepting the problem of predicting users that had lived in the endemic region in the past, no model had satisfactory $F1$ scores for any of the problems. The top two $F1$ scores for \cref{target2,target3,target4} and for any best-fit learners, were $0.62$ and $0.45$.
 Both these scores were attained by the Naive Bayes algorithm for the problems of currently non-endemic users that were living in the endemic region in the past, and for the problem of tagging useres tht had migrated in any direction.
 
-Interestingly enough, these poor scores for the Naive Bayes algorithm were in comprison much higher than the ones reached by any other classifier, when compared in relative terms.
+Interestingly enough, these poor scores for the Naive Bayes algorithm were, in comparison, much higher than the ones reached by any other classifier, when compared in relative terms.
 All of the other classifiers had extremely poor $F1$ performances in all of \cref{target2,target3,target4}.
-The best $F1$ score for all of these classifieres and for any of these problems, was $0.194$.
+The best $F1$ score for the rest of the classifiers, across these problems, was $0.393$.
+This was attained by the Random Forest learner when tagging people that had migrated out of the endemic region, from a userbase of those who are currently non-endemic.
 
-We mentioned this situation earlier for the experiments specifically performed on the problem of tagging unidirectional migrants, for
-Where for all of the learners output a very low $Precision$ score.
+We mentioned this situation earlier for the experiments specifically performed on this same \cref{target4}.
+We saw that all of the learners output a very low $Precision$ score and this impacted the overall $F1$ score.
 
 The overconfidence shown by the models dervied a high misclassification rate for the samples in the positive class.
-This error was so strong, that it drove the $F1$ scores to very low values, even when showing acceptable $Recall$ scores.
-Models seemed to output acceptable $Recall$ with a huge tradeoff in the the precision of their positive predictions.
+This error was so strong, that it drove the $F1$ scores to low values, even when they output acceptable $Recall$ scores.
+Still, the tradeoff in the the precision of their positive predictions was very strong.
 
-Also, in highly unbalanced classification problems, such as the ones we are working with here, we see this overconfidence effect in learners affected by the unbalanced target class.
-With this we can say that precisely tagging migrant users can be a very difficult prediction problem.
+We mentioned that this situation might appear in highly unbalanced classification problems, such as the ones we are working with here.
+The overconfidence effect in learners is affected by the unbalanced target class.
+With this we can say that precisely tagging migrant users is a very difficult prediction problem, with the data available.
 
 It was surprising to discover that a very modest and fast model could, under this metric, outperform all of the other more complex ones.
 We suspect that the Naive Bayes's formulation helps limit the overconfidence of the final model, allowing it to still reach acceptable $Recall$ scores.
@@ -419,7 +422,7 @@ In all, we saw that this was the best model for all problems of migrant users, a
 In contrast, the problem of predicting users that lived in the past, by only knowing their information from the present, is a task that does not present this ill-conditioned class imbalance.
 Results show that the Gradient Tree Boosting learner reaches very high $F1$ scores of $95\%$ whilst both the Logistic Regression and Random Forests reach values of $90\%$.
 
-A very similar situation was observed across other scores and for all of the problems.
+A similar situation was observed in other scores and across all problems.
 
 
 \subsection{Other Scores}\label{subsec:master_table_other_scores}
