--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -799,7 +799,7 @@ Yet it gives better overall performance on the CV error, when the model is corre
 As explained before, the boosting methods build an ensemble model learned from other \textit{weaker} learners where decision trees are the most commonly used base models.
 This is the same for \textit{gradient tree boosting}.
 
-This type of boosting algorithm was first introduced by Friedman, J., and the full details of the work can be found in Full details of this model can be found in \cref{friedman-gradientBoosting2001}.
+This type of boosting algorithm was first introduced by Friedman, J., and the full details of the work can be found in Full details of this model can be found in \textcite{friedman-gradientBoosting2001}.
 
 Using the same formulation as before, let $Tr$ be a set of tree models and $K$ the number of trees in $Tr$, then trees will be the parameters for this model and at step $m$ the output will be
 
