--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -56,7 +56,8 @@ We will introduce the necessary formulations for the models, as well as examples
 Finally, we will show specific experiments on long-term human migrations using CDR data, in-line with the presentation of each method.
 For each case, we will show the results of these applications.
 
-We close with a summary of results and conclusions in \cref{ch:results_conclusion}, where different key information is presented, along with possible lines of future work.
+We close with a summary of results in \cref{ch:results} where key information from the output of this work is presented,
+and we give this work's conclusions in \cref{ch:conclusions}, along with drawbacks from the methodology used and we show possible lines of future work.
 
 
 \section{Mobile Phone Records, Mobility and Epidemiology}
@@ -140,7 +141,7 @@ Even though governmental programs have been ongoing for years now~\cite{plan_nac
 
 
 In 2004, the joint work of \textit{Instituto Nacional de Cardiología ``Ignacio Chávez''} and  \textit{Instituto de Biología de la UNAM} resulted in a Chagas disease database for Mexico (\cite{cruz2006chagmex}). Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease. Based on this data, we defined the Mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide. The resulting risk region is shown in \cref{fig:endemic_zone_mexico}. It covers most of the South region of the country and includes the states of Jalisco, Oaxaca, Veracruz, Guerrero, Morelos, Puebla, Hidalgo and Tabasco.
-This region is considered as the endemic zone $E_Z$ for the Mexican case in the analysis described in~\cref{ch:descr-risk} and \cref{ch:results_conclusion}.
+This region is considered as the endemic zone $E_Z$ for the Mexican case in the analysis described in~\cref{ch:descr-risk} and \cref{ch:machineLearning}.
 
 \begin{figure}[ht]
 \centering
