--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -430,40 +430,42 @@ With this, the features with highest scores can be thought to be the most inform
 
 In this subsection, we explore on the task described on \cref{target4} by fitting random forest learners.
 Here, our cross validation procedure explored multiple combinations of hyperparameters that we predefined.
-Let $\alpha_i \forall i \in {1,\ldots,J}$ be the list of our $j$ hyperparameters.
+Let $\alpha_i $ be the list of our $J$ hyperparameters, $\forall i \in {1,\ldots,J}$ .
 
-Denote all possible combinations by $A_1 \times A_2 \ldots \times  A_J$, where each hyperparameter $\alpha_i$ will take all possible values in the predefined sets $A_i \forall i \in {1,\ldots,J}$.
+Denote all possible combinations by $A_1 \times A_2 \ldots \times  A_J$, where each hyperparameter $\alpha_i$ will take all possible values in the predefined sets $A_i$ $ \forall i \in {1,\ldots,J}$.
 In practice, we must be careful with the size of these combinations since the full cross validation procedure is costly for the Random Forest algorithm.
 The learner has $J \geq 10$ and for each component $A_i$ it is normal to have more than 10 possible values.
-Thus the search can span a space of more than millions of combinations.
-Moreover, each combination has to be cross validated on the number of folds we define, creating a very large amount of iterations during this search.
-These fits will take computer resources such as memory and CPU time.
-So we have to limit ourselves to search over a limited amount of values.
+As such, the search space can grow exponentially big with the size of each hyperparamter's values.
+Moreover, each hyperparamter combination has to be cross validated on the number of folds we define, creating a very large amount of iterations for the complete search.
+These fits will take computer resources such as memory and CPU time, so we have to limit ourselves to search over a limited amount of values.
 
-Also, if we were to use commodity hardware with standard tools for this procedure, the experiment would take weeks and, given our dataset size, it would not fit into a standard computer's memory of less than 12GB of memory.
+If we were to use commodity hardware and standard programming tools for this procedure, the experiment would take weeks and, given our dataset size, it would not fit into a standard computer's memory of less than 12GB of memory.
 
-For these reasons, we take on the task with a specialized server with a 16 core CPU and 72 gigabytes of available RAM.\@
+For these reasons, we preform the task with a specialized server with a 16 core CPU and 72 gigabytes of available RAM.\@
 The system runs a UNIX based OS and our algorithms were scripted in~\cite{python3.5}.
-We used the specialized machine learning package~\cite{graphlab} to handle the parallelization and the distribution of system resources.\footnote{We can't stress enough how convenient this package is for our purposes.
-	It handles most of the complex task of maxing out the system resources to perform as fast as possible in the cross validation procedure and in the construction of the main $X$ dataset.
-	Also, it has an \textit{out-of-the-box} memory management for large datasets.
-	With this, we can natively handle data that is larger than the amount of memory used by the server, requiring minimal user knowledge to tune.}
+We used~\cite{graphlab}, a specialized machine learning Python package, to handle the parallelization and the distribution of system resources.\footnote{We can't stress enough how convenient this package is for our purposes.
+It handles most of the complex task of maxing out the system resources to perform as fast as possible in the cross validation procedure and in the construction of the main $X$ dataset.
+Also, it has an \textit{out-of-the-box} memory management for large datasets.
+With this, we can natively handle data that is larger than the amount of memory used by the server, requiring minimal user knowledge to tune.}
 
 This package has allowed us to conveniently run these long experiments without risk of failure due to lack of memory and without any prior expert domain knowledge in multi-threading or parallel computing.
 
-For this case, we only considered migrant people that are non-endemic at $T_1$, but have been during $T_0$.
-In the general procedure, we cross validated the same possible hyperparameter configurations, where these spanned the following items:
+For this case, we only considered migrant people that are non-endemic at $T_1$, but have been during $T_0$, and we only train the learner over those users which are currently non-endemic.
+
+The cross validation was done over the same possible hyperparameter configurations the same CV configuration as in the general procedure.
+These combinations spanned over the following items:
+
 
 \begin{itemize}\label{list:random_forest_grid_search_params}
 
-  \item Every tree's maximum depth --- [max\_depth]
-  \item If the loss function will balance the weights of the positive and negative classes --- [balanced]
-  \item The maximum number of trees to grow in each fit--- [max\_iterations]
+  \item Every tree's maximum depth --- [$max\_depth$]
+  \item If the loss function will balance the weights of the positive and negative classes --- [$balanced$]
+  \item The maximum number of trees to grow in each fit--- [$num\_trees$]
   \item The splitting criterion at each node which can be either by the Gini Index or the Entropy condition--- [split\_criteria]
-  \item The sample percentage of features which are available to use at each split --- [max\_features]
-  \item The minimum number of samples required to split a node --- [min\_split]
-  \item The scoring function used to evaluate the learner in the CV evaluation --- [CV score]
-  \item The minimum reduction in the loss function required to split a node  --- [min\_loss]
+  \item The sample percentage of features which are available to use at each split --- [$max\_features$]
+  \item The minimum number of samples required to split a node --- [$min\_split$]
+  \item The scoring function used to evaluate the learner in the CV evaluation --- [$CV score$]
+  \item The minimum reduction in the loss function required to split a node  --- [$min\_loss$]
 %\caption{Available hyperparameters for the Random Forest classifier, with their corresponding code names.}
 \end{itemize}
 
@@ -479,7 +481,7 @@ For this experimentation, we recorded the outcome of the cross validation proced
 The summary of these results is given in \cref{tab:random_forest_big_experiment_results}.
 
 \begin{table}[!htb]
-\caption{Table of best results comparing two 5-fold full grid cross validation procedures on a Random Forest Classifier fit for \cref{target4}.
+\caption{Table of best results comparing two 10-fold full grid cross validation procedures on a Random Forest Classifier fit for \cref{target4}.
 	The scores, best hyperparameter values and run-time are shown for both experiments.}
 \label{tab:random_forest_big_experiment_results}
 \centering
@@ -488,19 +490,19 @@ The summary of these results is given in \cref{tab:random_forest_big_experiment_
 \toprule
 Result & Experiment 1 & Experiment 2 \\
 \midrule
+Running time (s)        & 2030 &  1264 \\
 CV $F1$ score           & 0.373  &  0.296 \\
 CV $Accuracy$ score     & 0.880 & 0.903   \\
 CV $Precision$ score    & 0.267 &  0.213 \\
 CV $Recall$ score       & 0.618 &  0.480 \\
 CV $Logloss$ score     &  0.337 & 0.391 \\
 CV $ROC AUC$ score    &  0.843 & 0.848 \\
-max\_depth     & 12 &  12 \\
-max\_iterations          & 150 &  200 \\
-balanced        & True & True  \\
-split\_criteria          & Gini &  Gini \\
-min\_loss  & 10 &  1 \\
-Running time (s)        & 2030 &  2064 \\
- max\_features (\%) & 50 & 80  \\
+$max\_depth$     & 12 &  12 \\
+$max\_iterations$          & 150 &  200 \\
+$balanced$        & True & True  \\
+$split\_criteria$          & Gini &  Gini \\
+$min\_loss$  & 10 &  1 \\
+$max\_features$ (\%) & 50 & 80  \\
 
 \bottomrule
 \end{tabular*}
@@ -738,7 +740,7 @@ The cross validation procedure set 10 folds for each hyperparameter
 \item the number of base learners
 \end{enumerate*}
 
-In each, we fixed a hyperparameter and we varied its values over a predefined range. 
+In each, we fixed a hyperparameter and we varied its values over a predefined range.
 We then graphed the change in score across these values.
 As a default configuration, 50 was the number of trees, and 6 were the trees' maximum depth and 0.1 was the fixed learning rate.
 Additionally, we used the Gini index as the impurity measure in the splitting criteria of each tree's node and the exponential loss function to grow the next estimator in line with the formulation given in \cref{eq:adaBoostThetaDecomposition}.
@@ -924,21 +926,21 @@ For our CV procedure, we will be searching the best learner over a grid combinat
 
 \begin{itemize}
 
-  \item The gradient descent's defined step size  --- [step\_size]
+  \item The gradient descent's defined step size  --- [$step\_size$]
   % \item The number of rounds without loss function improvement required to early stop the fit  --- [early\_stopping]
   \item Minimum threshold for the sum of samples' Hessians at a given node.
-  If a node's sum is smaller than this threshold then the fitting will stop  --- [min\_leaf\_weight]
+  If a node's sum is smaller than this threshold then the fitting will stop  --- [$min\_leaf\_weight$]
 \label{list:boosting_grid_search_params}
 \end{itemize}
 
 
 Using the same setup as before, we recorded the outcome of the cross validation procedures for the three experiments.
-The results were tabulated in terms of different scoring metrics, the run-time, the hyperparameters chosen and the top ten best features as selected by the best models.
+The results were tabulated in terms of different scoring metrics, the runtime, the hyperparameters chosen and the top ten best features as selected by the best models.
 
 A summary of the metrics and best hyperparameter values is given in \cref{tab:boosting_big_experiment_results}.
 
 \begin{table}[!htb]
-\caption{Table of best results comparing three 5-fold full grid cross validation procedures with a Gradient Boosting Classifier for \cref{target4}.  All relevant scores, best hyperparameter values and run-time are shown for both experiments.}
+\caption{Table of best results comparing three 10-fold full grid cross validation procedures with a Gradient Boosting Classifier for \cref{target4}.  All relevant scores, best hyperparameter values and run-time are shown for both experiments.}
 \label{tab:boosting_big_experiment_results}
 \centering
 \begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill} }  l l l l l }
@@ -946,21 +948,21 @@ A summary of the metrics and best hyperparameter values is given in \cref{tab:bo
 \toprule
 Result & Experiment 1 & Experiment 2 & Experiment 3 \\
 \midrule
-Running time (s)        & 2993 & 1172  &  204 \\
-CV $Accuracy$ score    & 0.889 &  0.843 &  0.8327 \\
-CV $ROC AUC$ score     & 0.884 & 0.880  &  0.881 \\
+Running time (s)        & 2993 & 1972  &  204 \\
 CV $F1$ score           & 0.314  &  0.319 &  0.354 \\
-CV $Logloss$ score     & 0.524 &  0.337 &  0.399 \\
-CV $Recall$ score    & 0.629 &  0.601 &  0.607 \\
+CV $Accuracy$ score    & 0.889 &  0.843 &  0.8327 \\
 CV $Precision$ score       & 0.209 &  0.217 &  0.249 \\
-balanced        & False & False  &  False \\
+CV $Recall$ score    & 0.629 &  0.601 &  0.607 \\
+CV $ROC AUC$ score     & 0.884 & 0.880  &  0.881 \\
+CV $Logloss$ score     & 0.524 &  0.337 &  0.399 \\
+$balanced$        & False & False  &  False \\
 % early\_stopping  & 5 &  5 & 5 \\
-max\_features (\%) & 80 & 75  &  10 \\
-max\_depth     & 15 &  15 &  2 \\
-max\_iterations     & 250 &  300 &  120 \\
-min\_leaf\_weight  & 2 &  5 &  10 \\
-min\_loss  & 10 &  1 &  0.01 \\
-step\_size  & 0.01 &  0.1 &  1 \\
+$max\_features$ (\%) & 80 & 75  &  10 \\
+$max\_depth$     & 15 &  15 &  2 \\
+$max\_iterations$     & 250 &  300 &  120 \\
+$min\_leaf\_weight$  & 2 &  5 &  10 \\
+$min\_loss$  & 10 &  1 &  0.01 \\
+$step\_size$  & 0.01 &  0.1 &  1 \\
 
 \bottomrule
 \end{tabular*}
